--- a/index.html
+++ b/index.html
@@ -10,13 +10,27 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
-    <!-- Nav -->
+
     <div class="container-fluid navalert-container">
+        <!-- Alert -->
+        <div class="container-fluid alert-container">
+            <div class="row d-none d-sm-block">
+                <div class="col-12">
+                    <div class="site-wide-alert alert alert-warning">
+                        <strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for the price
+                        of 6! <a href="">See here for details!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/alert -->
+
+        <!-- Nav -->
         <nav class="navbar navbar-dark navbar-expand-sm">
             <a href="/" class="navbar-brand">Whiskey Drop</a>
 
@@ -45,24 +59,13 @@
             </div>
             <div class="d-none d-md-block">
                 <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door!</i></p>
-                <a href="/login">Sign In / Sign Up</a>
+                <a href="/login" class="btn btn--cta">Sign In / Sign Up</a>
             </div>
         </nav>
     </div>
     <!-- / nav -->
 
-    <!-- Alert 
-    <div class="container alert-container">
-        <div class="row d-none d-sm-block">
-            <div class="col-12">
-                <div class="alert alert-warning">
-                    <strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subscription for the price
-                    of 6! <a href="">See here for details!</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    /alert -->
+
 
     <!--Callout-->
 
@@ -90,87 +93,93 @@
 
 
     <!-- Quotes -->
-    <div class="container quotes-container">
-        <section class="quotes">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <h2 class="text-uppercase">Quotes:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="media">
-                        <div class="d-none d-sm-block">
-                            <img src="images/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>I've been introduced to more then 10 great international whiskeys I never
-                                    knew about</p>
-                                <p>- Jane Doe</p>
-                            </blockquote>
-                        </div>
+    <div class="container-wrapper">
+        <div class="container quotes-container content-container">
+            <section class="quotes">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Quotes:</h2>
+                        <hr class="block-divider">
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="media">
-                        <div class="d-none d-sm-block">
-                            <img src="images/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>I haven't been sober for months!</p>
-                                <p>- John Doe</p>
-                            </blockquote>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="images/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I've been introduced to more then 10 great international whiskeys I never
+                                        knew about</p>
+                                    <p>- Jane Doe</p>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
-                </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="images/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I haven't been sober for months!</p>
+                                    <p>- John Doe</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
 
-            </div>
-        </section>
+                </div>
+            </section>
+        </div>
     </div>
     <!--/.quotes-->
 
 
     <!--Features-->
-    <div class="container features-container">
-        <section class="features">
-            <div class="row">
-                <div class="col-12 my-5">
-                    <h2 class="text-uppercase">Features:</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span
-                                class="badge badge-success">New!</span></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempora cupiditate
-                            nemo accusantium asperiores esse, libero voluptatem tempore nam et earum quidem
-                            numquam praesentium sapiente quo rem aspernatur minus rerum?</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+    <div class="container-wrapper container-wrapper-blue">
+        <div class="container features-container content-container">
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Features:</h2>
+                        <hr class="block-divider block-divider--brown">
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero iusto non corporis
-                            facilis architecto similique dolorum modi doloribus hic ratione, nihil, error
-                            exercitationem autem, pariatur quos quo? Ducimus, consequatur necessitatibus?</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span
+                                    class="badge badge-success">New!</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempora cupiditate
+                                nemo accusantium asperiores esse, libero voluptatem tempore nam et earum quidem
+                                numquam praesentium sapiente quo rem aspernatur minus rerum?</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero iusto non corporis
+                                facilis architecto similique dolorum modi doloribus hic ratione, nihil, error
+                                exercitationem autem, pariatur quos quo? Ducimus, consequatur necessitatibus?</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+                    <div class="col-12 d-md-none d-lg-block col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nostrum sequi sunt
+                                minima asperiores eum iusto impedit maxime nam qui debitis quisquam, et vero neque
+                                aliquid necessitatibus, incidunt explicabo! Minima.</p>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="feature">
-                        <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nostrum sequi sunt
-                            minima asperiores eum iusto impedit maxime nam qui debitis quisquam, et vero neque
-                            aliquid necessitatibus, incidunt explicabo! Minima.</p>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </div>
     <!-- / features -->
 
