--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
                 <div class="row">
                     <div class="col-12 page-header">
                         <h2 class="text-uppercase">Features:</h2>
-                        <hr class="block-divider block-divider--brown">
+                        <hr class="block-divider block-divider--brown block-divider--white">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="feature">
-                            <h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span
+                            <h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1 <span
                                     class="badge badge-success">New!</span></h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempora cupiditate
                                 nemo accusantium asperiores esse, libero voluptatem tempore nam et earum quidem
@@ -161,7 +161,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="feature">
-                            <h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+                            <h3><i class="fas fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero iusto non corporis
                                 facilis architecto similique dolorum modi doloribus hic ratione, nihil, error
                                 exercitationem autem, pariatur quos quo? Ducimus, consequatur necessitatibus?</p>
@@ -170,7 +170,7 @@
                     </div>
                     <div class="col-12 d-md-none d-lg-block col-lg-4">
                         <div class="feature">
-                            <h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+                            <h3><i class="fas fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur nostrum sequi sunt
                                 minima asperiores eum iusto impedit maxime nam qui debitis quisquam, et vero neque
                                 aliquid necessitatibus, incidunt explicabo! Minima.</p>
